[package]
name = "git-qsync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git-qsync"
path = "src/main.rs"

[[bin]]
name = "git-qe"
path = "src/main.rs"

[[bin]]
name = "git-qi"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
dialoguer = "0.11"
walkdir = "2.0"
jiff = "0.2"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
