[package]
name = "git-qsync"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
dialoguer = "0.11"
walkdir = "2.0"
log = "0.4"
env_logger = "0.11"
gix = { version = "0.73", default-features = false, features = ["revision"] }
tempfile = "3.0"
camino = "1.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
